--- a/application/admin/view/common/left.html
+++ b/application/admin/view/common/left.html
@@ -230,14 +230,14 @@
             </a>
             <ul class="submenu">
                 <li>
-                    <a href="#">
-                        <span class="menu-text">商店设置</span>
+                    <a href="{:url('Conf/conflist')}">
+                        <span class="menu-text">配置项</span>
                         <i class="menu-expand"></i>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
-                        <span class="menu-text">会员注册项设置</span>
+                    <a href="{:url('Conf/lst')}">
+                        <span class="menu-text">配置管理</span>
                         <i class="menu-expand"></i>
                     </a>
                 </li>
